--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Alexis Florence</title>
 
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png">
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.ico">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
