--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,8 @@
     <title>Alexis Florence</title>
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
