--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>Alexis Florence</title>
 
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
 
